reward and compensation norms

--- a/baseline_trials/TPNormPage.html
+++ b/baseline_trials/TPNormPage.html
@@ -13,6 +13,8 @@
 <script>
 $(document).ready(function () {
 
+    var current_treatment = "{{ treatment }}";
+
     // task variables
 
     total_endowment = {{ C.total_endowment }}
@@ -26,7 +28,11 @@ $(document).ready(function () {
 
     // dictator = total_endowment - receiver
     dictator_recipient_TPeffect = TP_points_assigned * TP_eff
-    dictator = total_endowment - receiver - dictator_recipient_TPeffect
+    dictator_kept = total_endowment - receiver
+    dictator = dictator_kept - dictator_recipient_TPeffect
+
+    document.getElementById("dictator_recipient_TPeffect").textContent = dictator_recipient_TPeffect;
+    //document.getElementById("dictator_kept").textContent = dictator_kept;
 
     // country pictures from https://github.com/irixapps/World-Flags/tree/master
     // naming convention: https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
@@ -66,6 +72,14 @@ $(document).ready(function () {
     for (let i = 0; i < TP; i++) {
         $('.coinstackTP2PP').append('<div class="coinown2PP" style="left:83%;"></div>');
     }
+    // Make another coin stack for DG reward in 3PR: different location
+    for (let i = 0; i < dictator_recipient_TPeffect; i++) {
+        $('.coinstackTP3PR').append('<div class="coinown3PR" style="left:19%;"></div>');
+    }
+    // Make another coin stack for recipient compensation in 3PC: different location
+    for (let i = 0; i < dictator_recipient_TPeffect; i++) {
+        $('.coinstackTP3PC').append('<div class="coinown3PC" style="left:83%;"></div>');
+    }
 
     // Initialize the number labels
     $('#countTP').text(`${TP}`);
@@ -73,6 +87,8 @@ $(document).ready(function () {
     $('#countDDes').text(`${dictator_recipient_TPeffect}`);
     $('#countR').text(`${receiver}`);
     $('#countTP2PP').text(`${TP}`);
+    $('#countTP3PR').text(`${dictator_recipient_TPeffect}`);
+    $('#countTP3PC').text(`${dictator_recipient_TPeffect}`);
 
     function deactivateNumbers(numbersToDisable) {
         numbersToDisable.forEach(num => {
@@ -320,7 +336,31 @@ $(document).ready(function () {
         transform: translateX(-50%);
     }
 
-     .coin-count-labelD {
+    .coinown3PR {
+        width: 1.8vw; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coinown3PC {
+        width: 1.8vw; /* Coins take the full width of the stack container */
+        min-width:10px;
+        height: 8px; /* Coin height is proportional to the width */
+        border-radius: 50%;
+        background: linear-gradient(145deg, #ffd700, #e6c200);
+        border: 0.1vw solid #FFFFFF; /* Border size scales with the coin size */
+        box-shadow: inset -3px -2px 5px rgba(0, 0, 0, 0.2);
+        position: absolute;
+        transform: translateX(-50%);
+    }
+
+    .coin-count-labelD {
     font-size: 1.2rem;
     color: #333; /* Adjust color as needed */
     position: absolute; /* Position relative to .container */
@@ -363,6 +403,26 @@ $(document).ready(function () {
     .coin-count-labelTP2PP {
     font-size: 1.2rem;
     color: darkred; /* Adjust color as needed */
+    position: absolute; /* Position relative to .container */
+    left: 73%; /* Center horizontally */
+    transform: translateX(-50%); /* Adjust for exact centering */
+    top: 8%; /* Move up; adjust value as needed */
+    text-align: center; /* Align text */
+}
+
+    .coin-count-labelTP3PR {
+    font-size: 1.2rem;
+    color: #333; /* Adjust color as needed */
+    position: absolute; /* Position relative to .container */
+    left: 30%; /* Center horizontally */
+    transform: translateX(-50%); /* Adjust for exact centering */
+    top: 8%; /* Move up; adjust value as needed */
+    text-align: center; /* Align text */
+}
+
+    .coin-count-labelTP3PC {
+    font-size: 1.2rem;
+    color: #333; /* Adjust color as needed */
     position: absolute; /* Position relative to .container */
     left: 73%; /* Center horizontally */
     transform: translateX(-50%); /* Adjust for exact centering */
@@ -424,6 +484,32 @@ $(document).ready(function () {
     .coinown2PP:nth-child(2)   { top: 3.0vw; }
     .coinown2PP:nth-child(1)   { top: 3.3vw; }
 
+    .coinown3PR:nth-child(1)  { top: 3.3vw; }
+.coinown3PR:nth-child(2)  { top: 3vw; }
+.coinown3PR:nth-child(3)  { top: 2.7vw; }
+.coinown3PR:nth-child(4)   { top: 2.4vw; }
+.coinown3PR:nth-child(5)   { top: 2.1vw; }
+.coinown3PR:nth-child(6)   { top: 1.8vw; }
+.coinown3PR:nth-child(7)   { top: 1.5vw; }
+.coinown3PR:nth-child(8)   { top: 1.2vw; }
+.coinown3PR:nth-child(9)   { top: 0.9vw; }
+.coinown3PR:nth-child(10)   { top: 0.6vw; }
+.coinown3PR:nth-child(11)   { top: 0.3vw; }
+.coinown3PR:nth-child(12)   { top: 0vw; }
+
+.coinown3PC:nth-child(1)  { top: 3.3vw; }
+.coinown3PC:nth-child(2)  { top: 3vw; }
+.coinown3PC:nth-child(3)  { top: 2.7vw; }
+.coinown3PC:nth-child(4)   { top: 2.4vw; }
+.coinown3PC:nth-child(5)   { top: 2.1vw; }
+.coinown3PC:nth-child(6)   { top: 1.8vw; }
+.coinown3PC:nth-child(7)   { top: 1.5vw; }
+.coinown3PC:nth-child(8)   { top: 1.2vw; }
+.coinown3PC:nth-child(9)   { top: 0.9vw; }
+.coinown3PC:nth-child(10)   { top: 0.6vw; }
+.coinown3PC:nth-child(11)   { top: 0.3vw; }
+.coinown3PC:nth-child(12)   { top: 0vw; }
+
 
 
  .coin_destroyed:nth-child(30)  { top: 8.7vw; }
@@ -456,6 +542,7 @@ $(document).ready(function () {
 .coin_destroyed:nth-child(3)   { top: 0.6vw; }
 .coin_destroyed:nth-child(2)   { top: 0.3vw; }
 .coin_destroyed:nth-child(1)   { top: 0vw; }
+
 
 </style>
 </head>
@@ -491,18 +578,44 @@ $(document).ready(function () {
 
     <div class="coin-count-labelD" id="countD"></div>
 
-    <span class='coinstack coinstackDDes'>
-    </span>
-
-    <div class="coin-count-labelDDes" id="countDDes"></div>
 
     <span class='coinstack coinstackR'>
     </span>
 
     <div class="coin-count-labelR" id="countR"></div>
 
-    <!--    Adjust location of TP coin stack depending on 2PP vs 3PP-->
-    {% if player.treatment == "3PP punish norm" %}
+
+
+    {% if player.treatment == "3PP punish norm" or player.treatment == "2PP punish norm" %}
+
+    <span class='coinstack coinstackDDes'>
+    </span>
+
+    <div class="coin-count-labelDDes" id="countDDes"></div>
+
+{% endif %}
+
+     {% if player.treatment == "3PR reward norm" %}
+
+    <span class='coinstack coinstackTP3PR'>
+    </span>
+
+    <div class="coin-count-labelTP3PR" id="countTP3PR"></div>
+
+{% endif %}
+
+    {% if player.treatment == "3PC comp norm" %}
+
+    <span class='coinstack coinstackTP3PC'>
+    </span>
+
+    <div class="coin-count-labelTP3PC" id="countTP3PC"></div>
+
+{% endif %}
+
+
+<!--    Adjust location of TP coin stack depending on 2PP vs 3PP-->
+    {% if player.treatment == "3PP punish norm" or player.treatment == "3PR reward norm" or player.treatment == "3PC comp norm" %}
 
     <span class='coinstack coinstackTP'>
     </span>
@@ -520,9 +633,14 @@ $(document).ready(function () {
 
 {% endif %}
 
+
+
+
 </div>
 
-    <p>{{ treatment_text1 }} {{ C.norm_strategy_punish_norm }} {{ treatment_text2 }} {{ C.norm_strategy_dic_gives_binary }}? </p>
+<!--    <p>{{ treatment_text1 }} <span id="dictator_recipient_TPeffect"></span> {{ treatment_text2 }} {{ C.norm_strategy_dic_gives_binary }} points and kept <span id="dictator_kept"></span>? </p>-->
+<p>{{ treatment_text1 }} <span id="dictator_recipient_TPeffect"></span> points?  </p>
+
 
 <!--<div class='numbers'>-->
 <!--   <div class="number-row">-->
