--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -28,7 +28,7 @@ $(document).ready(function () {
 
     TP = {{ C.TP_points }} // punishment points
 
-    dictator_recipient_TPeffect = 0 // dictator earnings that are destroyed by punishment or added by reward
+    dictator_recipient_TPeffect = 0 // dictator or recipient points that are destroyed by punishment or added by reward/compensation
 
     // country pictures from https://github.com/irixapps/World-Flags/tree/master
     // naming convention: https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
