reward and compensationgiving

--- a/baseline_trials/TPNormPage.html
+++ b/baseline_trials/TPNormPage.html
@@ -571,7 +571,7 @@ $(document).ready(function () {
 
     <img src="/static/{{ image }}" style="width:27vw; position:absolute; left:-25%; top:3vw">
 
-    <!-- <img src='/static/baseline/3PP punish.png' style='width:27vw; position:absolute; left:20%; top:3vw'>  -->
+<!--     <img src='/static/baseline/3PC comp.png' style='width:27vw; position:absolute; left:20%; top:3vw'>-->
 
     <span class='coinstack coinstackD'>
     </span>
