--- a/baseline_trials/DictatorNormPage.html
+++ b/baseline_trials/DictatorNormPage.html
@@ -20,8 +20,8 @@ $(document).ready(function () {
     receiver = {{ C.norm_strategy_dic_gives }} // The receiver gets however much the dictator gives
     dictator = total_endowment - receiver
 
-    //TP = {{ C.punishment_points }} // punishment points
-    //pun_eff = {{ C.punishment_effectiveness }} // punishment effectiveness
+    //TP = {{ C.TP_points }} // punishment points
+    //TP_eff = {{ C.TP_effectiveness }} // punishment effectiveness
 
     // country pictures from https://github.com/irixapps/World-Flags/tree/master
     // naming convention: https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
