--- a/baseline_trials/DictatorPage.html
+++ b/baseline_trials/DictatorPage.html
@@ -17,8 +17,8 @@ $(document).ready(function () {
 
     total_endowment = {{ C.total_endowment }}
 
-    //TP = {{ C.punishment_points }} // punishment points
-    //pun_eff = {{ C.punishment_effectiveness }} // punishment effectiveness
+    //TP = {{ C.TP_points }} // punishment points
+    //pun_eff = {{ C.TP_effectiveness }} // punishment effectiveness
 
     receiver_endowment = {{ C.receiver_endowment}}
 
