--- a/baseline_trials/TPPage.html
+++ b/baseline_trials/TPPage.html
@@ -674,6 +674,24 @@ $(document).ready(function () {
 
 {% endif %}
 
+    <!--    Add symbol for giving or taking-->
+
+    {% if player.treatment == "3PP punish" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 52%; left: 15%;">-</span>
+{% endif %}
+
+    {% if player.treatment == "3PR reward" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 15%;">+</span>
+{% endif %}
+
+    {% if player.treatment == "3PC comp" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 87%;">+</span>
+{% endif %}
+
+     {% if player.treatment == "2PP punish" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 3%; left: 50%;">-</span>
+{% endif %}
+
 
 
 
