--- a/baseline_trials/DictatorNormPage.html
+++ b/baseline_trials/DictatorNormPage.html
@@ -415,6 +415,22 @@ $(document).ready(function () {
     </span>
     -->
 
+        {% if player.treatment == "3PP give norm" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 52%; left: 15%;">-</span>
+{% endif %}
+
+    {% if player.treatment == "3PR give norm" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 15%;">+</span>
+{% endif %}
+
+    {% if player.treatment == "3PC give norm" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 87%;">+</span>
+{% endif %}
+
+     {% if player.treatment == "2PP give norm" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 3%; left: 50%;">-</span>
+{% endif %}
+
 </div>
 
     <p>{{ treatment_text }} {{ C.norm_strategy_dic_gives }}? </p>
