--- a/baseline_trials/TPNormPage.html
+++ b/baseline_trials/TPNormPage.html
@@ -633,6 +633,22 @@ $(document).ready(function () {
 
 {% endif %}
 
+        {% if player.treatment == "3PP punish norm" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 52%; left: 15%;">-</span>
+{% endif %}
+
+    {% if player.treatment == "3PR reward norm" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 15%;">+</span>
+{% endif %}
+
+    {% if player.treatment == "3PC comp norm" %}
+    <span style="color: green; position: absolute; font-size: 2vw; top: 52%; left: 87%;">+</span>
+{% endif %}
+
+     {% if player.treatment == "2PP punish norm" %}
+    <span style="color: red; position: absolute; font-size: 2vw; top: 3%; left: 50%;">-</span>
+{% endif %}
+
 
 
 
